Skills Block Fied

--- a/index.html
+++ b/index.html
@@ -79,8 +79,8 @@
 				</div>
 			</div>
 		</div>
-		<div class="section skills-block">
-			<div class="skills-container container-lg adaptive">
+		<div class="section skills-block adaptive">
+			<div class="skills-container container-lg">
 				<h3 class="text-white mb-5">Skills</h3>
 				<div class="row row-cols-3 justify-content-center">
 					<div class="skill-card">
