--- a/index.html
+++ b/index.html
@@ -53,12 +53,12 @@
 		<div class="section about-block adaptive">
 			<div class="about-container">
 				<div class="col-sm">
-					<img src="img/avatar.svg" alt="Avatar" class="avatar" width="448px" height="547px">
+					<img src="img/avatar.png" alt="Avatar" class="avatar" width="450px" height="550px">
 				  </div>
 				  <div class="col-sm">
 					<h1 class="text-white">Marat Tazeev</h1>
 					<p class="body-1 text-white">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Consectetur doloremque, blanditiis eum, non nobis totam temporibus error voluptate facilis ex molestias officiis, doloribus officia dolore eligendi laboriosam. Qui necessitatibus, iure odit sunt minus et doloribus temporibus neque eligendi sit, quos officia molestias debitis tempora. Possimus quo qui adipisci molestias facilis dolorum fugiat inventore veritatis minus ad culpa, quia dicta aspernatur quae accusamus asperiores aliquid quidem eius odit cupiditate fuga. Odit esse rerum sapiente recusandae eos aut corporis, optio libero delectus voluptatem fuga nemo quaerat, adipisci at, nihil labore doloribus reiciendis. Repudiandae adipisci quisquam pariatur enim culpa voluptate obcaecati ratione possimus.<br/><br/>
-						<a href="#" class="text-primary">miguelruz1126@gmail.com</a>
+						<a href="#" class="text-primary">arteildev@gmail.com</a>
 						</p>
 				  </div>
 			</div>
@@ -83,35 +83,29 @@
 			<div class="skills-container container-lg">
 				<h3 class="text-white mb-5">Skills</h3>
 				<div class="row row-cols-3 justify-content-center">
-					<div class="skill-card">
-						<img src="img/code.svg" alt="Code">
-						<h3 class="text-white">HTML</h3>
-						<div class="body-1 text-white">Con mi experiencia en patrones de diseño responsive tengo una visión clara acerca de como implementarlos de manera efectiva en cualquier proyecto</div>
+					<div class="skill-card text-center">
+						<img src="img/html.png" alt="HTML">
+						<h2 class="text-white">HTML</h2>
 					</div>
-					<div class="skill-card">
-						<img src="img/code.svg" alt="Code">
-						<h3 class="text-white">CSS</h3>
-						<div class="body-1 text-white">Con mi experiencia en patrones de diseño responsive tengo una visión clara acerca de como implementarlos de manera efectiva en cualquier proyecto</div>
+					<div class="skill-card text-center">
+						<img src="img/css.png" alt="CSS">
+						<h2 class="text-white">CSS</h2>
 					</div>
-					<div class="skill-card">
-						<img src="img/code.svg" alt="Code">
-						<h3 class="text-white">Java Script</h3>
-						<div class="body-1 text-white">Con mi experiencia en patrones de diseño responsive tengo una visión clara acerca de como implementarlos de manera efectiva en cualquier proyecto</div>
+					<div class="skill-card text-center">
+						<img src="img/js.png" alt="JavaScript">
+						<h2 class="text-white">JavaScript</h2>
 					</div>
-					<div class="skill-card">
-						<img src="img/code.svg" alt="Code">
-						<h3 class="text-white">PHP</h3>
-						<div class="body-1 text-white">Con mi experiencia en patrones de diseño responsive tengo una visión clara acerca de como implementarlos de manera efectiva en cualquier proyecto</div>
+					<div class="skill-card text-center">
+						<img src="img/php.png" alt="PHP">
+						<h2 class="text-white">PHP</h2>
 					</div>
-					<div class="skill-card">
-						<img src="img/code.svg" alt="Code">
-						<h3 class="text-white">React</h3>
-						<div class="body-1 text-white">Con mi experiencia en patrones de diseño responsive tengo una visión clara acerca de como implementarlos de manera efectiva en cualquier proyecto</div>
+					<div class="skill-card text-center">
+						<img src="img/react.png" alt="React">
+						<h2 class="text-white">React</h2>
 					</div>
-					<div class="skill-card">
-						<img src="img/code.svg" alt="Code">
-						<h3 class="text-white">3D</h3>
-						<div class="body-1 text-white">Con mi experiencia en patrones de diseño responsive tengo una visión clara acerca de como implementarlos de manera efectiva en cualquier proyecto</div>
+					<div class="skill-card text-center">
+						<img src="img/swift.png" alt="Swift">
+						<h2 class="text-white">Swift</h2>
 					</div>
 				</div>
 			</div>
