--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header id="header" class="fixed-top">
         <nav class="navbar container-lg navbar-dark navbar-expand-sm">
             <div class="container-fluid">
-            	<a class="navbar-brand text-white" href="#"><h4>ARTEIL DEV.</h4></a>
+            	<a class="navbar-brand text-white" href="#"><h4 class="fw-bold">ARTEIL DEV.</h4></a>
               	<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 	<span class="navbar-toggler-icon"></span>
               	</button>
@@ -31,7 +31,7 @@
                     		<a class="nav-link text-white" aria-current="page" href="#">Skills</a>
                   		</li>
 						<li class="nav-item">
-                    		<a class="nav-link text-white" aria-current="page" href="#">Contacts</a>
+                    		<a class="nav-link text-white" aria-current="page" href="#">Contact Me</a>
                   		</li>
                     </ul>
               	</div>
@@ -46,11 +46,11 @@
 				<h5 class="h5 text-white mt-4">This my Web portfolio</h5>
 				<div class="homepage-buttons flex-row mt-5">
 					<a class="button button-primary px-5">Projects</a>
-					<a class="button button-secondary ms-4">Contacts</a>
+					<a class="button button-secondary ms-4">Contact Me</a>
 				</div>
 			</div>
 		</div>
-		<div class="section about-block adaptive">
+		<div class="section about-block adaptive margin-block">
 			<div class="about-container">
 				<div class="col-sm">
 					<img src="img/avatar.png" alt="Avatar" class="avatar" width="450px" height="550px">
@@ -63,7 +63,7 @@
 				  </div>
 			</div>
 		</div>
-		<div class="section projects-block">
+		<div class="section projects-block margin-block">
 			<div class="projects-container container-lg adaptive">
 				<h3 class="text-white">Last Projects</h3>
 				<div class="project-cards">
@@ -79,7 +79,7 @@
 				</div>
 			</div>
 		</div>
-		<div class="section skills-block adaptive">
+		<div class="section skills-block adaptive margin-block">
 			<div class="skills-container container-lg">
 				<h3 class="text-white mb-5">Skills</h3>
 				<div class="row row-cols-3 justify-content-center">
@@ -110,6 +110,66 @@
 				</div>
 			</div>
 		</div>
+		<div class="section contact-block adaptive margin-block">
+			<div class="contact-container container-lg text-center">
+				<h1>Let's Talk!</h1>
+				<p class="subtitle-1">If you are interested in my work or have any concerns, do not hesitate to write me!</p>
+				<div class="contact-form mt-5 p-4 text-start">
+					<form>
+						<div class="mb-4">
+							<label class="body-1 mb-2">Name</label>
+							<input type="text" name="name" id="input_name" placeholder="Email">
+						</div>
+						<div class="mb-4">
+							<label class="body-1 mb-2">Email</label>
+							<input type="email" name="email" id="input_email" placeholder="Example@gmail.com">
+						</div>
+						<div class="mb-3">
+							<label class="body-1 mb-2" for="input_message">Message</label>
+							<textarea name="message" id="input-message" placeholder="Hey...	"></textarea>
+						</div>
+						<button class="button button-primary">Send</button>
+					</form>
+				</div>
+			</div>
+		</div>
+		<footer class="adaptive">
+			<div class="footer-container container-lg">
+				<div class="row">
+					<div class="col-sm">
+						<h4 class="fw-bold">ARTEIL DEV.</h4>
+					</div>
+					<div class="col-sm">
+						<ul>
+							<li class="nav-item">
+								<a class="nav-link text-white subtitle-1 accent" aria-current="page" href="#">Home</a>
+							  </li>
+							<li class="nav-item">
+								<a class="nav-link text-white body-2" aria-current="page" href="#">About</a>
+							</li>
+							<li class="nav-item">
+								<a class="nav-link text-white body-2" aria-current="page" href="#">Projects</a>
+							</li>
+							<li class="nav-item">
+								<a class="nav-link text-white body-2" aria-current="page" href="#">Skills</a>
+							</li>
+						</ul>
+					</div>
+					<div class="col-sm">
+						<h4 class="fw-bold"></h4>
+					</div>
+					<div class="col-sm">
+						<p class="subtitle-1 accent">Social Networks</p>
+						<div class="socials text-start">
+							<a href="#"><img src="img/vk.png" alt="VK"></a>
+							<a href="#"><img src="img/telegram.png" alt="Telegram"></a>
+							<a href="#"><img src="img/github.png" alt="GitHub"></a>
+						</div>
+					</div>
+				</div>
+			</div>
+			<p class="subtitle-2 mt-3">© 2022 Marat Tazeev</p>
+		</footer>
 	</main>
 	<script src="vendor/script.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
