--- a/index.html
+++ b/index.html
@@ -161,9 +161,9 @@
 					<div class="col-sm">
 						<p class="subtitle-1 accent">Social Networks</p>
 						<div class="socials text-start">
-							<a href="#"><img src="img/vk.png" alt="VK"></a>
-							<a href="#"><img src="img/telegram.png" alt="Telegram"></a>
-							<a href="#"><img src="img/github.png" alt="GitHub"></a>
+							<a href="https://vk.com/arteilzx"><img src="img/vk.png" alt="VK"></a>
+							<a href="https://t.me/xDevPunk"><img src="img/telegram.png" alt="Telegram"></a>
+							<a href="https://github.com/ArteilDev"><img src="img/github.png" alt="GitHub"></a>
 						</div>
 					</div>
 				</div>
