--- a/index.html
+++ b/index.html
@@ -41,69 +41,67 @@
 	<main class="container-lg">
 		<div class="section homepage">
 			<div class="hero align-self-center">
-				<h1 class="text-white">Arteil</h1>
-				<h1 class="text-primary">Web-Developer</h1>
-				<h5 class="h5 text-white mt-4">This my Web portfolio</h5>
+				<h1 class="text-white section-title element-anim">Arteil</h1>
+				<h1 class="text-primary section-title element-anim">Web-Developer</h1>
+				<h5 class="h5 text-white mt-4 section-subtitle element-anim">This my Web portfolio</h5>
 				<div class="homepage-buttons flex-row mt-5">
-					<a class="button button-primary projects-button px-5">Projects</a>
-					<a class="button button-secondary contact-button ms-4">Contact Me</a>
+					<a class="button button-primary projects-button px-5 element-anim">Projects</a>
+					<a class="button button-secondary contact-button ms-4 element-anim">Contact Me</a>
 				</div>
 			</div>
 		</div>
 		<div class="section about-block adaptive margin-block">
 			<div class="about-container">
 				<div class="col-sm">
-					<img src="img/avatar.png" alt="Avatar" class="avatar" width="450px" height="550px">
+					<img src="img/avatar.png" alt="Avatar" class="avatar image element-anim" width="450px" height="550px">
 				  </div>
 				  <div class="col-sm">
-					<h1 class="text-white">Marat Tazeev</h1>
-					<p class="body-1 text-white">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Consectetur doloremque, blanditiis eum, non nobis totam temporibus error voluptate facilis ex molestias officiis, doloribus officia dolore eligendi laboriosam. Qui necessitatibus, iure odit sunt minus et doloribus temporibus neque eligendi sit, quos officia molestias debitis tempora. Possimus quo qui adipisci molestias facilis dolorum fugiat inventore veritatis minus ad culpa, quia dicta aspernatur quae accusamus asperiores aliquid quidem eius odit cupiditate fuga. Odit esse rerum sapiente recusandae eos aut corporis, optio libero delectus voluptatem fuga nemo quaerat, adipisci at, nihil labore doloribus reiciendis. Repudiandae adipisci quisquam pariatur enim culpa voluptate obcaecati ratione possimus.<br/><br/>
-						<a href="mailto:arteildev@gmail.com?subject=For Work / По работе" class="text-primary">arteildev@gmail.com</a>
-						</p>
+					<h1 class="text-white section-title element-anim">Marat Tazeev</h1>
+					<p class="body-1 text-white section-subtitle element-anim">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Consectetur doloremque, blanditiis eum, non nobis totam temporibus error voluptate facilis ex molestias officiis, doloribus officia dolore eligendi laboriosam. Qui necessitatibus, iure odit sunt minus et doloribus temporibus neque eligendi sit, quos officia molestias debitis tempora. Possimus quo qui adipisci molestias facilis dolorum fugiat inventore veritatis minus ad culpa, quia dicta aspernatur quae accusamus asperiores aliquid quidem eius odit cupiditate fuga. Odit esse rerum sapiente recusandae eos aut corporis, optio libero delectus voluptatem fuga nemo quaerat, adipisci at, nihil labore doloribus reiciendis. Repudiandae adipisci quisquam pariatur enim culpa voluptate obcaecati ratione possimus.<br/><br/></p>
 				  </div>
 			</div>
 		</div>
 		<div class="section projects-block margin-block">
 			<div class="projects-container container-lg adaptive">
-				<h3 class="text-white">Last Projects</h3>
+				<h3 class="text-white section-title element-anim">Last Projects</h3>
 				<div class="project-cards">
 					<div class="row row-cols-2">
-						<img src="img/project-img.png" alt="Project" width="100%">
-						<img src="img/project-img.png" alt="Project" width="100%">
-						<img src="img/project-img.png" alt="Project" width="100%">
-						<img src="img/project-img.png" alt="Project" width="100%">
+						<a href="#"><img src="img/project-img.png" class="image element-anim" alt="Project" width="100%"></a>
+						<a href="#"><img src="img/project-img.png" class="image element-anim" alt="Project" width="100%"></a>
+						<a href="#"><img src="img/project-img.png" class="image element-anim" alt="Project" width="100%"></a>
+						<a href="#"><img src="img/project-img.png" class="image element-anim" alt="Project" width="100%"></a>
 					</div>
 				</div>
 				<div class="text-center pt-3">
-					<a class="button button-primary align-self-end px-5">View All <i class="bi bi-arrow-right"></i></a>
+					<a class="button button-primary align-self-end px-5 element-anim">View All <i class="bi bi-arrow-right"></i></a>
 				</div>
 			</div>
 		</div>
 		<div class="section skills-block adaptive margin-block">
 			<div class="skills-container container-lg">
-				<h3 class="text-white mb-5">Skills</h3>
+				<h3 class="text-white mb-5 section-title element-anim">Skills</h3>
 				<div class="row row-cols-3 justify-content-center">
-					<div class="skill-card text-center">
+					<div class="skill-card text-center image element-anim">
 						<img src="img/html.png" alt="HTML">
 						<h2 class="text-white">HTML</h2>
 					</div>
-					<div class="skill-card text-center">
+					<div class="skill-card text-center image element-anim">
 						<img src="img/css.png" alt="CSS">
 						<h2 class="text-white">CSS</h2>
 					</div>
-					<div class="skill-card text-center">
+					<div class="skill-card text-center image element-anim">
 						<img src="img/js.png" alt="JavaScript">
 						<h2 class="text-white">JavaScript</h2>
 					</div>
-					<div class="skill-card text-center">
+					<div class="skill-card text-center image element-anim">
 						<img src="img/php.png" alt="PHP">
 						<h2 class="text-white">PHP</h2>
 					</div>
-					<div class="skill-card text-center">
+					<div class="skill-card text-center image element-anim">
 						<img src="img/react.png" alt="React">
 						<h2 class="text-white">React</h2>
 					</div>
-					<div class="skill-card text-center">
+					<div class="skill-card text-center image element-anim">
 						<img src="img/swift.png" alt="Swift">
 						<h2 class="text-white">Swift</h2>
 					</div>
@@ -112,24 +110,23 @@
 		</div>
 		<div class="section contact-block adaptive margin-block">
 			<div class="contact-container container-lg text-center">
-				<h1>Let's Talk!</h1>
-				<p class="subtitle-1">If you are interested in my work or have any concerns, do not hesitate to write me!</p>
+				<h1 class="section-title element-anim">Let's Talk!</h1>
+				<p class="subtitle-1 section-subtitle element-anim">If you are interested in my work or have any concerns, do not hesitate to write me!</p>
 				<div class="contact-form mt-5 p-4 text-start">
-					<form action="mail.php" enctype="multipart/form-data" class="form" method="POST">
-						<input type="hidden" name="admin_email[]" value="arteildev@gmail.com">
+					<form action="mail.php" class="form element-anim" method="POST">
 						<div class="mb-4">
 							<label class="body-1 mb-2">Name</label>
-							<input type="text" name="name" data-validate-field="name" placeholder="Name">
+							<input type="text" name="name" placeholder="Name">
 						</div>
 						<div class="mb-4">
 							<label class="body-1 mb-2">Email</label>
-							<input type="email" name="email" data-validate-field="email" placeholder="Example@gmail.com">
+							<input type="email" name="email" placeholder="Example@gmail.com">
 						</div>
 						<div class="mb-3">
 							<label class="body-1 mb-2">Message</label>
 							<textarea name="message" data-validate-field="message" placeholder="Hey..."></textarea>
 						</div>
-						<button class="button button-primary mb-3" type="submit">Send</button>
+						<button class="button button-primary mb-3 element-anim" type="submit">Send</button>
 					</form>
 				</div>
 			</div>
