Change About Me

--- a/index.html
+++ b/index.html
@@ -57,7 +57,9 @@
 				  </div>
 				  <div class="col-sm">
 					<h1 class="text-white section-title element-anim">Marat Tazeev</h1>
-					<p class="body-1 text-white section-subtitle element-anim">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Consectetur doloremque, blanditiis eum, non nobis totam temporibus error voluptate facilis ex molestias officiis, doloribus officia dolore eligendi laboriosam. Qui necessitatibus, iure odit sunt minus et doloribus temporibus neque eligendi sit, quos officia molestias debitis tempora. Possimus quo qui adipisci molestias facilis dolorum fugiat inventore veritatis minus ad culpa, quia dicta aspernatur quae accusamus asperiores aliquid quidem eius odit cupiditate fuga. Odit esse rerum sapiente recusandae eos aut corporis, optio libero delectus voluptatem fuga nemo quaerat, adipisci at, nihil labore doloribus reiciendis. Repudiandae adipisci quisquam pariatur enim culpa voluptate obcaecati ratione possimus.<br/><br/></p>
+					<p class="body-1 text-white section-subtitle element-anim">Hi everyone, my name is Marat. I am a junior web -developer. Since childhood I like to learn something new, understand new technologies. I tried myself in many areas, such as: game development, 3D modeling, design. Started my career in game development. Making games on Unity was my hobby when I was a student.
+						<br />Over time I got interested in creating websites and mobile apps. I take most of my knowledge from the Internet, articles, courses, video tutorials.
+						<br />Lately I've been interested in React JS, React Native, Swift.<br/><br/></p>
 				  </div>
 			</div>
 		</div>
