--- a/thank-you.html
+++ b/thank-you.html
@@ -9,9 +9,9 @@
     <title>Thank you!</title>
 </head>
 <body>
-    <main class="homepage container-lg">
+    <main class="homepage container-lg adaptive">
         <div class="thank-you">
-            <img src="img/mail.svg" alt="eMail" width="350">
+            <img src="img/mail.svg" alt="eMail" width="350px">
             <h1 class="text-primary mt-5">Thank You!</h1>
             <h5>Your message has been sent. I will try to answer you as soon as possible</h5>
             <a href="index.html" class="button button-primary mt-5 pe-5"><i class="bi bi-arrow-left me-3"></i>Go Back</a>
