--- a/index.html
+++ b/index.html
@@ -75,10 +75,10 @@
 				<h3 class="text-white section-title element-anim lng-last-projects">Last Projects</h3>
 				<div class="project-cards">
 					<div class="row row-cols-2">
-						<a href="#"><img src="img/project-img.png" class="image element-anim" alt="Project" width="100%"></a>
-						<a href="#"><img src="img/project-img.png" class="image element-anim" alt="Project" width="100%"></a>
-						<a href="#"><img src="img/project-img.png" class="image element-anim" alt="Project" width="100%"></a>
-						<a href="#"><img src="img/project-img.png" class="image element-anim" alt="Project" width="100%"></a>
+						<a href="#"><div class="card-example image element-anim"><h4>Work In Progress <span class="loading">.</span></h4></div></a>
+						<a href="#"><div class="card-example image element-anim"><h4>Work In Progress <span class="loading">.</span></h4></div></a>
+						<a href="#"><div class="card-example image element-anim"><h4>Work In Progress <span class="loading">.</span></h4></div></a>
+						<a href="#"><div class="card-example image element-anim"><h4>Work In Progress <span class="loading">.</span></h4></div></a>
 					</div>
 				</div>
 				<div class="text-center pt-3">
