--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link href="vendor/style.css" rel="stylesheet">
+	<!-- <script src="https://www.google.com/recaptcha/api.js?render=6LfzHz8eAAAAAKItTaigqgGv4vPLa-Xw2nwTx6UJ"></script> -->
     <title>Arteil Dev.</title>
 </head>
 <body>
@@ -135,6 +136,7 @@
 							<label class="body-1 mb-2 lng-form-message">Message</label>
 							<textarea name="message" data-validate-field="message" placeholder="Hey..."></textarea>
 						</div>
+						<input type="hidden" id="token" name="token">
 						<button class="button button-primary mb-3 element-anim lng-form-button" type="submit">Send</button>
 					</form>
 				</div>
@@ -183,5 +185,33 @@
 	<script src="vendor/lang.js"></script>
 	<script src="vendor/script.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+	<!-- <script>
+		document.querySelector('form').addEventListener('submit', (e) => {
+			e.preventDefault();
+			let tk = '';
+			grecaptcha.ready(function() {
+          		grecaptcha.execute('6LfzHz8eAAAAAKItTaigqgGv4vPLa-Xw2nwTx6UJ', {action: 'homepage'}).then(function(token) {
+            		tk = token;
+					document.getElementById('token').value = token;
+					const data = new URLSearchParams();
+					for (const pair of new FormData(document.querySelector('form'))) {
+							data.append(pair[0], pair[1]);
+					}
+					fetch('mail.php', {
+						method: 'post',
+						body: data,
+					})
+					.then(response => response.json())
+					.then(result => {
+						if (result['om_score'] >= 0.5) {
+							console.log(result)
+						} else {
+							console.log(result)
+						}
+					});
+          		});
+        	});
+		});
+	</script> -->
 </body>
 </html>
