--- a/error.html
+++ b/error.html
@@ -14,7 +14,7 @@
             <img src="img/emoji.png" alt="eMail" width="125px">
             <h1 class="text-primary mt-5">Упс...Что-то пошло не так.</h1>
             <h5>Произошла ошибка. Мы уже исправляем ее</h5>
-            <a href="index.php" class="button button-primary mt-5 pe-5"><i class="bi bi-arrow-left me-3"></i>Вернуться</a>
+            <a href="index.html" class="button button-primary mt-5 pe-5"><i class="bi bi-arrow-left me-3"></i>Вернуться</a>
         </div>
     </main>
 </body>
