--- a/thank-you.html
+++ b/thank-you.html
@@ -14,7 +14,7 @@
             <img src="img/mail.svg" alt="eMail" width="350px">
             <h1 class="text-primary mt-5">Спасибо!</h1>
             <h5>Ваше сообщение было отправлено. Я постараюсь ответить как можно скорее!</h5>
-            <a href="index.php" class="button button-primary mt-5 pe-5"><i class="bi bi-arrow-left me-3"></i>Вернуться</a>
+            <a href="index.html" class="button button-primary mt-5 pe-5"><i class="bi bi-arrow-left me-3"></i>Вернуться</a>
         </div>
     </main>
 </body>
