--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
 	<main class="container-lg">
 		<div class="section homepage">
 			<div class="hero align-self-center">
-				<h1 class="text-white section-title element-anim">Arteil</h1>
-				<h1 class="text-primary section-title element-anim lng-web-developer">Web-Developer</h1>
+				<h1 class="text-white section-title element-anim">ARTEIL</h1>
+				<h1 class="text-primary section-title element-anim lng-web-developer">WEB-DEVELOPER</h1>
 				<h5 class="h5 text-white mt-4 section-subtitle element-anim lng-portfolio">This my Web portfolio</h5>
 				<div class="homepage-buttons flex-row mt-5">
 					<a class="button button-primary projects-button px-5 element-anim lng-projects-button">Projects</a>
@@ -60,13 +60,13 @@
 		<div class="section about-block adaptive margin-block">
 			<div class="about-container">
 				<div class="col-sm">
-					<img src="img/avatar.png" alt="Avatar" class="avatar image element-anim" width="450px" height="550px">
+					<img src="img/avatar.jpeg" alt="Avatar" class="avatar image rounded element-anim" width="400px" height="550px">
 				  </div>
 				  <div class="col-sm">
 					<h1 class="text-white section-title element-anim lng-name">Marat Tazeev</h1>
 					<p class="body-1 text-white section-subtitle element-anim lng-subtitle">Hi everyone, my name is Marat. I am a junior web -developer. Since childhood I like to learn something new, understand new technologies. I tried myself in many areas, such as: game development, 3D modeling, design. Started my career in game development. Making games on Unity was my hobby when I was a student.
 						<br />Over time I got interested in creating websites and mobile apps. I take most of my knowledge from the Internet, articles, courses, video tutorials.
-						<br />Lately I've been interested in React JS, React Native, Swift.<br/><br/>
+						<br />Lately I've been interested in Vue, React JS, React Native, Swift.<br/><br/>
 					</p>
 				  </div>
 			</div>
@@ -76,10 +76,10 @@
 				<h3 class="text-white section-title element-anim lng-last-projects">Last Projects</h3>
 				<div class="project-cards">
 					<div class="row row-cols-2">
-						<a href="#"><div class="card-example image element-anim"><h4>Work In Progress <span class="loading">.</span></h4></div></a>
-						<a href="#"><div class="card-example image element-anim"><h4>Work In Progress <span class="loading">.</span></h4></div></a>
-						<a href="#"><div class="card-example image element-anim"><h4>Work In Progress <span class="loading">.</span></h4></div></a>
-						<a href="#"><div class="card-example image element-anim"><h4>Work In Progress <span class="loading">.</span></h4></div></a>
+						<a href="#"><div class="card-example image rounded element-anim"><img src="img/project-apple.png" class="image" alt="" style="width: 100%;"></div></a>
+						<a href="#"><div class="card-example image rounded element-anim"><h4>Work In Progress <span class="loading">.</span></h4></div></a>
+						<a href="#"><div class="card-example image rounded element-anim"><h4>Work In Progress <span class="loading">.</span></h4></div></a>
+						<a href="#"><div class="card-example image rounded element-anim"><h4>Work In Progress <span class="loading">.</span></h4></div></a>
 					</div>
 				</div>
 				<div class="text-center pt-3">
@@ -91,27 +91,27 @@
 			<div class="skills-container container-lg">
 				<h3 class="text-white mb-5 section-title element-anim lng-skills-title">Skills</h3>
 				<div class="row row-cols-3 justify-content-center">
-					<div class="skill-card text-center image element-anim">
+					<div class="skill-card rounded text-center image element-anim">
 						<img src="img/html.png" alt="HTML">
 						<h2 class="text-white">HTML</h2>
 					</div>
-					<div class="skill-card text-center image element-anim">
+					<div class="skill-card rounded text-center image element-anim">
 						<img src="img/css.png" alt="CSS">
 						<h2 class="text-white">CSS</h2>
 					</div>
-					<div class="skill-card text-center image element-anim">
+					<div class="skill-card rounded text-center image element-anim">
 						<img src="img/js.png" alt="JavaScript">
 						<h2 class="text-white">JavaScript</h2>
 					</div>
-					<div class="skill-card text-center image element-anim">
+					<div class="skill-card rounded text-center image element-anim">
 						<img src="img/php.png" alt="PHP">
 						<h2 class="text-white">PHP</h2>
 					</div>
-					<div class="skill-card text-center image element-anim">
+					<div class="skill-card rounded text-center image element-anim">
 						<img src="img/react.png" alt="React">
 						<h2 class="text-white">React</h2>
 					</div>
-					<div class="skill-card text-center image element-anim">
+					<div class="skill-card rounded text-center image element-anim">
 						<img src="img/swift.png" alt="Swift">
 						<h2 class="text-white">Swift</h2>
 					</div>
@@ -122,7 +122,7 @@
 			<div class="contact-container container-lg text-center">
 				<h1 class="section-title element-anim lng-contact-title">Let's Talk!</h1>
 				<p class="subtitle-1 section-subtitle element-anim lng-contact-subtitle">If you are interested in my work or have any concerns, do not hesitate to write me!</p>
-				<div class="contact-form mt-5 p-4 text-start">
+				<div class="contact-form rounded mt-5 p-4 text-start">
 					<form action="mail.php" class="form element-anim" method="POST">
 						<div class="mb-4">
 							<label class="body-1 mb-2 lng-form-name">Name</label>
