--- a/index.html
+++ b/index.html
@@ -92,27 +92,27 @@
 				<h3 class="text-white mb-5 section-title element-anim lng-skills-title">Skills</h3>
 				<div class="row row-cols-3 justify-content-center">
 					<div class="skill-card rounded text-center image element-anim">
-						<img src="img/html.png" alt="HTML">
+						<img src="img/icons/html.png" alt="HTML">
 						<h2 class="text-white">HTML</h2>
 					</div>
 					<div class="skill-card rounded text-center image element-anim">
-						<img src="img/css.png" alt="CSS">
+						<img src="img/icons/css.png" alt="CSS">
 						<h2 class="text-white">CSS</h2>
 					</div>
 					<div class="skill-card rounded text-center image element-anim">
-						<img src="img/js.png" alt="JavaScript">
+						<img src="img/icons/js.png" alt="JavaScript">
 						<h2 class="text-white">JavaScript</h2>
 					</div>
 					<div class="skill-card rounded text-center image element-anim">
-						<img src="img/php.png" alt="PHP">
+						<img src="img/icons/php.png" alt="PHP">
 						<h2 class="text-white">PHP</h2>
 					</div>
 					<div class="skill-card rounded text-center image element-anim">
-						<img src="img/react.png" alt="React">
+						<img src="img/icons/react.png" alt="React">
 						<h2 class="text-white">React</h2>
 					</div>
 					<div class="skill-card rounded text-center image element-anim">
-						<img src="img/swift.png" alt="Swift">
+						<img src="img/icons/swift.png" alt="Swift">
 						<h2 class="text-white">Swift</h2>
 					</div>
 				</div>
@@ -170,9 +170,9 @@
 					<div class="col-sm">
 						<p class="subtitle-1 accent lng-socials">Social Networks</p>
 						<div class="socials text-start">
-							<a href="https://vk.com/arteilzx" target="_blank"><img src="img/vk.png" alt="VK"></a>
-							<a href="https://t.me/xDevPunk" target="_blank"><img src="img/telegram.png" alt="Telegram"></a>
-							<a href="https://github.com/ArteilDev" target="_blank"><img src="img/github.png" alt="GitHub"></a>
+							<a href="https://vk.com/arteilzx" target="_blank"><img src="img/icons/vk.png" alt="VK"></a>
+							<a href="https://t.me/xDevPunk" target="_blank"><img src="img/icons/telegram.png" alt="Telegram"></a>
+							<a href="https://github.com/ArteilDev" target="_blank"><img src="img/icons/github.png" alt="GitHub"></a>
 						</div>
 					</div>
 				</div>
